# monopoly_DHBW_SWE_TINF23B3

./: .gitignore  README.md
monopoly/: .gitignore  DHBW_REQUIREMENTS.md  DOKUMENTATION_PROGRAMMENTWURF.md  README.md  pyproject.toml  run.sh  setup_fedora.sh  test_money_logic.py  test_pasch_buying.py
monopoly/src/monopoly/: __main__.py
monopoly/src/monopoly/application/dto/: game_state_dto.py  player_state_dto.py
monopoly/src/monopoly/application/ports/: game_repository.py  presenter.py  random_port.py  (+1 more)
monopoly/src/monopoly/domain/: card_type.py  tile_color.py  tile_type.py  token.py
monopoly/src/monopoly/infrastructure/: board_factory.py  deck_factory.py
monopoly/src/saves/: game_save.json
monopoly/tests/: test_attempt_leave_jail.py  test_bankruptcy_property_release.py  test_bankruptcy_turn_order.py  test_board.py  test_board_factory.py  test_board_renderer.py  test_build_house.py  test_buy_property.py  test_check_winner.py  test_command_parser.py  test_draw_chance_card.py  test_draw_community_card.py  test_end_turn.py  test_hotel.py  test_house_rent.py  test_jail_full_rules.py  test_jail_rules.py  test_money.py  test_pay_rent.py  test_play_turn.py  test_player.py  test_resolve_tile_action.py  test_special_tile_persistence.py  test_start_game.py  test_toggle_view.py  test_turn_state.py
monopoly/tests/application/: test_load_game.py  test_save_game.py  test_sell_building.py
monopoly/tests/infrastructure/: test_json_game_repository.py  test_serializer_deserializer_advanced.py
monopoly/tests/presentation/: test_cli_save_load_sell_integration.py
(+51 files in other folders)
